Fix header backgrond image getting cut off

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,24 +25,33 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 .header{
-	background: url('/assets/phone-guy.jpg');
-	background-size: cover;
-	background-position: 0% 60%; 
-	height: 200px;
-	margin-bottom: 50px;
+	background-color: black;
+	height: 220px;
+	margin-bottom: 25px;
 	color: #fff;
 	border-bottom: 12px solid #223432; 
-	padding: 60px  80px 10px;	
+	
+}
+.inner-header {
+	padding: 65px  20px 10px;	
+	width: 60%;
+	margin: auto;
+  background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 0.75) 70%, rgba(0, 0, 0, 0.9) 100%), url('/assets/phone-guy.jpg') no-repeat;
+
+
+	background-size: cover;
+	background-position: 0% 60%; 
+	height: 100%;
+	
+
 }
 .new-container{
-
-	margin-right: 200px;
-	
+	margin-right: 200px;	
 }
 .side-container{
 	position: fixed;
 	right: 0;
-	top: 260px;
+	top: 235px;
 	width: 50px;
 	height: 200px;
 	background: #223432;
